--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2680,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "6769a3fd",
    "metadata": {},
    "outputs": [],
@@ -2694,55 +2694,6 @@
     "\n",
     "# Calculate the average for the new column\n",
     "merged_data['Check-in Experience'] = merged_data[check_in_experience_columns].mean(axis=1).round()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "8a3598fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 102806 entries, 2 to 141537\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column                                      Non-Null Count   Dtype  \n",
-      "---  ------                                      --------------   -----  \n",
-      " 0   Gender                                      102806 non-null  float64\n",
-      " 1   Date of Birth                               102806 non-null  object \n",
-      " 2   Source of Traffic                           102806 non-null  int64  \n",
-      " 3   Onboard Wifi Service                        102806 non-null  float64\n",
-      " 4   Embarkation/Disembarkation time convenient  102806 non-null  float64\n",
-      " 5   Ease of Online booking                      102806 non-null  float64\n",
-      " 6   Gate location                               102806 non-null  float64\n",
-      " 7   Logging                                     102806 non-null  object \n",
-      " 8   Onboard Dining Service                      102806 non-null  float64\n",
-      " 9   Online Check-in                             102806 non-null  float64\n",
-      " 10  Cabin Comfort                               102806 non-null  float64\n",
-      " 11  Onboard Entertainment                       102806 non-null  float64\n",
-      " 12  Cabin service                               102806 non-null  float64\n",
-      " 13  Baggage handling                            102806 non-null  float64\n",
-      " 14  Port Check-in Service                       102806 non-null  float64\n",
-      " 15  Onboard Service                             102806 non-null  float64\n",
-      " 16  Cleanliness                                 102806 non-null  float64\n",
-      " 17  Ext_Intcode                                 102806 non-null  object \n",
-      " 18  Cruise Name                                 102806 non-null  object \n",
-      " 19  Ticket Type                                 102806 non-null  float64\n",
-      " 20  Cruise Distance                             102806 non-null  float64\n",
-      " 21  WiFi                                        49056 non-null   float64\n",
-      " 22  Dining                                      102806 non-null  float64\n",
-      " 23  Entertainment                               56554 non-null   float64\n",
-      " 24  Age                                         102806 non-null  float64\n",
-      "dtypes: float64(20), int64(1), object(4)\n",
-      "memory usage: 20.4+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "merged_data.info()"
    ]
   },
   {
@@ -3281,25 +3232,113 @@
   },
   {
    "cell_type": "markdown",
-   "id": "281b3752",
+   "id": "9c5d7431",
    "metadata": {},
    "source": [
-    "## Random Forest Features Importance Classifier\n",
+    "## Random Forest Features Importance Analysis\n",
     "**Purpose:**\n",
-    "- The Random Forest model can be used to calculate relative importance score between target and feature variables\n",
-    "- This provide insights into which features are most influential in making predictions, but does not imply causal relationship\n",
+    "- To gain insights into which features are more important in predicting `Ticket Type`\n",
     "\n",
     "**Findings:**\n",
-    "- Age (0.169169): Age remains the most influential feature according to the Random Forest model. This indicates that age is a crucial factor in predicting the ticket type. Older passengers may have distinct preferences or priorities when choosing a ticket type.\n",
-    "\n",
-    "- Online Check-in (0.083794): Online check-in retains its significance as the second most important feature. This suggests that the preference for online check-in strongly influences the prediction of ticket types. Passengers who value online check-in may have specific ticket preferences.\n",
-    "\n",
-    "- Onboard Wifi Service (0.065212): The availability or quality of onboard wifi is identified as a notable factor. This implies that the provision of onboard wifi can significantly impact the choice of ticket type. Passengers who consider wifi important may lean towards specific ticket types."
+    "- `Onboard Experience` is significantly more important compared to `Check-in Experience`\n",
+    "- `Onboard Experience` importance factor is much higher than `Check-in Experience`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 95,
+   "id": "5da03145",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Onboard Experience</td>\n",
+       "      <td>0.630956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Check-in Experience</td>\n",
+       "      <td>0.369044</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Feature  Importance\n",
+       "1   Onboard Experience    0.630956\n",
+       "0  Check-in Experience    0.369044"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "ordinal_features = ['Check-in Experience', 'Onboard Experience']\n",
+    "\n",
+    "# Define X (features) and y (target)\n",
+    "X = merged_data[ordinal_features]\n",
+    "y = merged_data['Ticket Type']\n",
+    "\n",
+    "# Initialize Random Forest Classifier\n",
+    "rf_classifier = RandomForestClassifier()\n",
+    "\n",
+    "# Fit the model\n",
+    "rf_classifier.fit(X, y)\n",
+    "\n",
+    "# Get feature importances\n",
+    "feature_importances = rf_classifier.feature_importances_\n",
+    "\n",
+    "# Create a DataFrame to display feature importances\n",
+    "importance_df = pd.DataFrame({'Feature': ordinal_features, 'Importance': feature_importances})\n",
+    "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
+    "importance_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "281b3752",
+   "metadata": {},
+   "source": [
+    "Further Analysis Using `Age`, `Source of Traffic`, and `Gender`\n",
+    "**Findings:**\n",
+    "- `Age` is the most influential feature in predicting ticket type\n",
+    "- `Source of Traffic` is also relevant, but to a much lesser extent compared to `Age`\n",
+    "- `Gender` has the least impact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "id": "b58e24d9",
    "metadata": {},
    "outputs": [
@@ -3330,110 +3369,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Age</td>\n",
-       "      <td>0.168151</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Online Check-in</td>\n",
-       "      <td>0.083628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Cabin service</td>\n",
-       "      <td>0.065328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Onboard Wifi Service</td>\n",
-       "      <td>0.065098</td>\n",
+       "      <td>Age</td>\n",
+       "      <td>0.900024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Embarkation/Disembarkation time convenient</td>\n",
-       "      <td>0.062172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Port Check-in Service</td>\n",
-       "      <td>0.060967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Gate location</td>\n",
-       "      <td>0.060518</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Onboard Service</td>\n",
-       "      <td>0.058043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Baggage handling</td>\n",
-       "      <td>0.056664</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
        "      <td>Source of Traffic</td>\n",
-       "      <td>0.054554</td>\n",
+       "      <td>0.096150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Ease of Online booking</td>\n",
-       "      <td>0.054135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Onboard Entertainment</td>\n",
-       "      <td>0.049212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Cabin Comfort</td>\n",
-       "      <td>0.048967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Onboard Dining Service</td>\n",
-       "      <td>0.044424</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Cleanliness</td>\n",
-       "      <td>0.040043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
        "      <td>Gender</td>\n",
-       "      <td>0.028095</td>\n",
+       "      <td>0.003826</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       Feature  Importance\n",
-       "13                                         Age    0.168151\n",
-       "5                              Online Check-in    0.083628\n",
-       "8                                Cabin service    0.065328\n",
-       "0                         Onboard Wifi Service    0.065098\n",
-       "1   Embarkation/Disembarkation time convenient    0.062172\n",
-       "10                       Port Check-in Service    0.060967\n",
-       "3                                Gate location    0.060518\n",
-       "11                             Onboard Service    0.058043\n",
-       "9                             Baggage handling    0.056664\n",
-       "15                           Source of Traffic    0.054554\n",
-       "2                       Ease of Online booking    0.054135\n",
-       "7                        Onboard Entertainment    0.049212\n",
-       "6                                Cabin Comfort    0.048967\n",
-       "4                       Onboard Dining Service    0.044424\n",
-       "12                                 Cleanliness    0.040043\n",
-       "14                                      Gender    0.028095"
+       "             Feature  Importance\n",
+       "0                Age    0.900024\n",
+       "1  Source of Traffic    0.096150\n",
+       "2             Gender    0.003826"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3441,11 +3402,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "ordinal_features = ['Onboard Wifi Service', 'Embarkation/Disembarkation time convenient', \n",
-    "                    'Ease of Online booking', 'Gate location', 'Onboard Dining Service', \n",
-    "                    'Online Check-in', 'Cabin Comfort', 'Onboard Entertainment', \n",
-    "                    'Cabin service', 'Baggage handling', 'Port Check-in Service', \n",
-    "                    'Onboard Service', 'Cleanliness', 'Age', 'Gender', 'Source of Traffic']\n",
+    "ordinal_features = ['Age','Source of Traffic','Gender']\n",
     "\n",
     "# Define X (features) and y (target)\n",
     "X = merged_data[ordinal_features]\n",
@@ -3463,7 +3420,7 @@
     "# Create a DataFrame to display feature importances\n",
     "importance_df = pd.DataFrame({'Feature': ordinal_features, 'Importance': feature_importances})\n",
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
-    "importance_df\n"
+    "importance_df"
    ]
   }
  ],
