--- a/eda.ipynb
+++ b/eda.ipynb
@@ -51,8 +51,15 @@
     "      3hiv. [Impute NaN Rows in `Onboard Dining Service` to `Cleanliness` with Column Mode](#impute-nan-rows-in-onboard-dining-service-to-cleanliness-with-column-mode)\n",
     "\n",
     "      3hvi. [Impute NaN Rows in `Cruise Distance` with Column Mean](#impute-nan-rows-with-mean-of-column-values-in-cruise-distance)\n",
+    "4. [Feature Engineering](#feature-engineering)\n",
+    "\n",
+    "    4a. [Create `Age` Column from `Date of Birth` and `Logging`](#create-age-column-from-date-of-birth-and-logging)\n",
+    "\n",
+    "    4b. [Create `Onboard Experience` Rating](#create-onboard-experience-rating)\n",
+    "\n",
+    "    4c. [Create `Check-in Experience` Rating](#create-check-in-experience-rating)\n",
     "    \n",
-    "4. [In-Depth Data Exploration](#in-depth-exploratory-data-analysis)"
+    "5. [In-Depth Data Exploration](#in-depth-exploratory-data-analysis)"
    ]
   },
   {
@@ -3388,7 +3395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
