Updated EDA findings

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -3188,9 +3188,8 @@
     "**Findings:**\n",
     "- Older people finds `Onboard Service` of lower priority (1.0 - 2.0)\n",
     "- `Onboard Service` rating is evenly distributed across age groups\n",
-    "- `Onboard Entertainment` \n",
     "- `Cabin Comfort` is highly important for older passengers\n",
-    "- `Cabin Service` is quite evenly distributed, skewing slightly more to older passengers\n",
+    "- `Cabin Service` and `Onboard Entertainment` is quite evenly distributed, skewing slightly more to older passengers\n",
     "- `Cleanliness` is less important for younger passengers, and more important for older passengers"
    ]
   },
